# basiCPP

./: .gitignore  CMakeLists.txt  glfw
include/: gviewer.cpp  gviewer.h  visualization.cpp  visualization.h
script/: pltshowimg.py
src/: fit.cpp  main.cpp
src/package_1/: simple.cpp  simple.h
utils/: logger.cpp  logger.h  trans.cpp  trans.h  transfer.cpp  transfer.h
